# nigh

./: .envrc  .gitignore  Cargo.toml  flake.nix
core/: Cargo.toml
core/src/: client.rs  lib.rs
nigh/: Cargo.toml
nigh/src/: lib.rs
protect_api/: Cargo.toml
protect_api/src/: api.rs  base_url.rs  client.rs  lib.rs
protect_api/src/api/: cameras.rs
protect_api/src/api/auth/: login.rs
